[package]
name = "jinx"
version = "0.0.0"
authors = ["Isabella Muerte"]
edition = "2018"
license = "MIT"
repository = "https://github.com/slurps-mad-rips/jinx-rs"
description = "Run CMake, CTest, and CPack, as well as parse their JSON object models"
keywords = ["cmake", "build", "build-dependencies"]
categories = ["development-tools", "development-tools::build-utils"]

[features]
default = ["async"]
async = ["tokio"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
anyhow = "1.0.26"
log = "0.4.8"
itertools = "0.8.2"

[dependencies.tokio]
version = "0.2.11"
features = ["process"]
default-features = false
optional = true
